--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,6 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/activity_settings" />
+    <!-- fragment_settings removed per user request; backup saved as fragment_settings.bak.xml -->
 
 </FrameLayout>
