--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,24 @@
     <!-- Nội dung chính -->
 
     <!-- 🔘 Nút thêm -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/add_transaction"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="@color/primaryColor"
+        app:tint="@color/white"
+        app:layout_anchor="@id/bottomNav"
+        app:layout_anchorGravity="top|center"
+        android:layout_marginBottom="12dp"
+        app:layout_dodgeInsetEdges="bottom" />
 
     <!-- 🔽 Thanh điều hướng -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="72dp"
-            android:contentDescription="@string/add_transaction"
-            android:src="@drawable/ic_add"
-            app:backgroundTint="@color/primaryColor"
-            app:layout_dodgeInsetEdges="bottom"
-            app:tint="@color/white" />
-    </androidx.viewpager2.widget.ViewPager2>
+        android:layout_height="match_parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
