--- a/app/src/main/res/layout/content_transactions.xml
+++ b/app/src/main/res/layout/content_transactions.xml
@@ -6,7 +6,9 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:clipToPadding="false"
+        android:paddingBottom="120dp">
 
         <LinearLayout
             android:layout_width="match_parent"
