--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,12 +14,12 @@
 
         <!-- Logo -->
         <ImageView
-            android:src="@drawable/ic_wallet"
+            android:src="@drawable/logo"
             android:contentDescription="@string/app_logo"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
-            android:layout_marginBottom="16dp"
-            app:tint="#16A34A" />
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="24dp"
+            android:scaleType="fitCenter" />
 
         <!-- Title -->
         <TextView
